crates/math-core/tests/snapshots/conversion_test__not_less_than_symbol.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\not< x"
---
<math>
    <mo lspace="0">≮</mo>
    <mi>x</mi>
</math>
