crates/math-core/tests/snapshots/conversion_test__not_subset.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\not\\subset"
---
<math>
    <mo>⊄</mo>
</math>
