crates/math-core/tests/snapshots/conversion_test__odv.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\odv{f}{x}"
---
<math>
    <mfrac>
        <mrow>
            <mrow><mspace/><mi mathvariant="normal">d</mi></mrow>
            <mi>f</mi>
        </mrow>
        <mrow>
            <mrow><mspace/><mi mathvariant="normal">d</mi></mrow>
            <mi>x</mi>
        </mrow>
    </mfrac>
</math>
