crates/math-core/tests/snapshots/conversion_test__operator_name.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{sn} x"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sn</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>x</mi>
    </mrow>
</math>
